# signorelo

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: main.cpp.84DCE0D9261A6B11.idx  sieve.hpp.2951A9F7D49E03FE.idx
include/: sieve.hpp
src/: main.cpp  millerrabin.cpp
